Fix overflow with long texts, change checkbox, minor design changes

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ html {
 }
 
 body {
-  background: var(--backgroundColor);
+  background: linear-gradient(to right, #EB6122, #431C52);
   font-family: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
   font-weight: 400;
   line-height: 1;
@@ -83,6 +83,7 @@ h3 {
 }
 
 h4 {
+  font-weight: 500;
   font-size: 1.563rem
 }
 
@@ -232,25 +233,26 @@ ul {
 .title-underline {
   background: var(--primary-500);
   width: 7rem;
-  height: .25rem;
+  height: .20rem;
   margin: 0 auto;
-  margin-top: 1rem
+  margin-top: 0.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .section-center {
-  width: 90vw;
+  width: 100vw;
   margin: 0 auto;
   margin-top: 8rem;
   max-width: 30rem;
   background: var(--white);
-  border-radius: var(--borderRadius);
+  border-radius: 15px 65px;
   padding: 2rem;
   box-shadow: var(--shadow-1);
   transition: var(--transition)
 }
 
 .section-center:hover {
-  box-shadow: var(--shadow-3)
+  box-shadow: var(--shadow-4)
 }
 
 form h4 {
@@ -288,15 +290,26 @@ form h4 {
   display: grid;
   grid-template-columns: auto 1fr auto;
   column-gap: 1rem;
-  align-items: center
+  align-items: center;
+  max-width: 100%;
+  word-break: break-word;
+  white-space: normal;
+  border-radius: 30px 30px;
+  box-shadow: var(--shadow-1);
+  transition: var(--transition);
+  padding: 1rem;
 }
 
 .single-item p {
-  letter-spacing: var(--letterSpacing)
+  letter-spacing: var(--letterSpacing);
+}
+
+.single-item:hover{
+  box-shadow: var(--shadow-3)
 }
 
 .remove-btn {
-  padding: .15rem .25rem;
+  padding: .35rem .75rem;
   font-size: .75rem;
   background: var(--black)
 }
